# flow_ffi

./: .clang-format  .gitignore  .yamllint  CMakeLists.txt  README.md  RELEASE.md  example_app.dart
dart_package/: LICENSE  README.md  analysis_options.yaml  ffigen.yaml  opencv_nodes.fmod  pubspec.yaml
dart_package/example/: simple_workflow.dart
dart_package/lib/: flow_ffi.dart
dart_package/lib/src/demos/: basic_demo.dart  event_demo.dart  graph_demo.dart  main_demo.dart  module_demo.dart
dart_package/lib/src/ffi/: bindings.dart  bindings_generated.dart  handles.dart
dart_package/lib/src/models/: connection.dart  environment.dart  factory.dart  graph.dart  module.dart  node.dart
dart_package/lib/src/services/: flow_service.dart  graph_builder.dart
dart_package/lib/src/utils/: error_handler.dart  event_manager.dart  type_converter_simple.dart
dart_package/test/: environment_test.dart  event_test.dart  factory_test.dart  graph_execution_test.dart  graph_test.dart  library_load_test.dart  memory_stress_test.dart  module_test.dart  node_test.dart  port_api_test.dart  port_metadata_test.dart
include/: flow_ffi.h
scripts/: README.md  check_format.sh  format_all.sh  install_hooks.sh  pre-commit-hook.sh  release-dart-package.sh  test_ffigen_ci.sh  verify-release-config.sh
src/: connection_bridge.cpp  env_bridge.cpp  env_wrapper.hpp  error_handling.cpp  error_handling.hpp  event_bridge.cpp  factory_bridge.cpp  flow_ffi.cpp  graph_bridge.cpp  handle_manager.cpp  handle_manager.hpp  module_bridge.cpp  node_bridge.cpp  type_conversions.cpp
test/: CMakeLists.txt  test_basic_functionality.cpp  test_env_factory.cpp  test_error_handling.cpp  test_handle_manager.cpp  test_module_phase6.cpp  test_port_metadata.cpp  test_port_metadata_free.cpp
